--- a/src/main/resources/templates/common/header_gys.html
+++ b/src/main/resources/templates/common/header_gys.html
@@ -75,7 +75,7 @@
 								<a th:href="@{/applyfor}">申请<span></span></a>
 							</li>
 							<li>
-								<a th:href="@{/usermanagement/purchasingrecords}">查询<span></span></a>
+								<a th:href="@{/deliverinform}">查询<span></span></a>
 							</li>
 							
 						</ul>
