--- a/src/main/resources/templates/administrator/supplier.html
+++ b/src/main/resources/templates/administrator/supplier.html
@@ -86,8 +86,8 @@
 						<a th:href="@{/administrator/supplier(p = 1,companyName=${companyName})}" type="button" role=button class="button green-button mb">首页</a>
 						<a th:if="${jq.p > 1}" th:href="@{/administrator/supplier(p=${jq.p - 1},companyName=${companyName})}"  type="button" role=button class="button green-button mb">上一页</a>
 						<a th:if="${jq.p <= 1}" class="button green-button mb">上一页</a>
-						<a th:if="${jq.p = jq.pageSize}"  type="button" class="button green-button mb">下一页</a>
-						<a th:if="${jq.p < jq.pageSize}" th:href="@{/administrator/supplier(p=${jq.p + 1},companyName=${companyName})}"  type="button" role=button class="button green-button mb">下一页</a>
+						<a th:if="${jq.p != jq.totolPage}"  type="button" class="button green-button mb">下一页</a>
+						<a th:if="${jq.p == jq.totolPage}" th:href="@{/administrator/supplier(p=${jq.p + 1},companyName=${companyName})}"  type="button" role=button class="button green-button mb">下一页</a>
 
 						<a th:href="@{/administrator/supplier(p=${jq.totolPage},companyName=${companyName})}" type="button" role=button class="button green-button mb">尾页</a>
 
