--- a/src/main/resources/templates/applyfor.html
+++ b/src/main/resources/templates/applyfor.html
@@ -1,80 +1,126 @@
 <!DOCTYPE html>
-<html>
+<html xmlns:th="http://www.thymeleaf.org"
+	  xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity4">
 	<head>
 		<meta charset="UTF-8">
 		<title>海马供应商申请 - 海马官网</title>
 		<link rel="shortcut icon" type="image/x-icon" href="favicon.ico" />
-		<link rel="stylesheet" href="css/commonn.css" />
-		<link rel="stylesheet" href="css/base.css" />
-		
-		<script type="text/javascript" src="../js/jquery-3.2.1.min.js" ></script>
+		<link rel="stylesheet" th:href="@{css/commonn.css}" />
+		<link rel="stylesheet" th:href="@{css/base.css}" />
+		<script type="text/javascript" th:src="@{js/jquery-3.2.1.min.js}"></script>
 
 	</head>
 
 	<body>
-		
+        <div sec:authorize="hasRole('ROLE_USER')"> <!-- 用户类型为ROLE_USER 显示 -->
+            <div th:include="common/header_gys" ></div>
+        </div>
+        <div sec:authorize="isAnonymous()"> <!-- 用户类型为ROLE_USER 显示 -->
+            <div th:include="common/header_gys" ></div>
+        </div>
 		<div class="wrap">
 			<!--内容开始-->
 			<div class="containermcompany">
 				<div class="width-wrap white-bg add-border cl">
 					<div class="title">
-						<h3>采购申请</h3>
-						
+						<h3>供应商申请信息</h3>
 					</div>
-
-			<!--筛选开始-->
-                <form>
-					<div class="form-wrap-5" id="divCompanyInfo">
-						<div class=" control-row">
-							<div class="control-label">
-								医用耗材名称：
-							</div>
-							<div class="control-input control-text  relative1">
-								<input type="text" placeholder="医用耗材名称" name="companyName" class=" input-text input-text-long1 left-wrap input-company-name">
-							</div>
-						
-						</div>
-						<div class=" control-row">
-							<div class="control-label">
-								所需数量：
-							</div>
-							<div class="control-input control-text  relative1">
-								<input type="text" placeholder="所需数量" name="companyName" class=" input-text input-text-long1 left-wrap input-company-name">
-							</div>
-						
-						</div>
-						<div class=" control-row">
-							<div class="control-label">
-								报价：
-							</div>
-							<div class="control-input control-text  relative1">
-								<input type="text" placeholder="报价" name="companyName" class=" input-text input-text-long1 left-wrap input-company-name">
-							</div>
-						
-						</div>
-						<div class=" control-row">
-							<div class="control-label">
-								交付时间：
-							</div>
-							<div class="control-input control-text  relative1">
-								<input type="text" placeholder="交付时间" name="companyName" class=" input-text input-text-long1 left-wrap input-company-name">
-							</div>
-						
-						</div>
-					</div>
-					<div align="center">
-						<input type="button" class="button2 mb" value="保存"/>
-					<input type="button" class="button green-button mb" value="提交"/>
-					</div>
-					
-                </form>
-                
 				<div class=" split-line mt mb"></div>
-                
 
-				</div>
+                    <form id="formCompany"  method="post" action="/addGysUserTwo" autocomplete="off" novalidate="novalidate">
+
+                        <div class="enterprise-real">
+                            <div class="form-wrap-1" id="divCompanyInfo">
+                                <input type="hidden" name="username"  th:value="${username}"/>
+                                <div class=" control-row">
+                                    <div class="control-label">
+                                        企业名称
+                                    </div>
+                                    <div class="control-input control-text  relative">
+                                        <input type="text" placeholder="企业名称" name="companyName" class=" input-text input-text-long left-wrap input-company-name">
+                                    </div>
+                                </div>
+                                <div class=" control-row">
+                                    <div class="control-label control-label-width">
+                                        营业执照
+                                    </div>
+                                    <div class="control-input select-small control-text lh40 relative cl">
+                                        <input type="text" placeholder="统一社会信用代码" name="tyshNumber" class=" input-text input-text-long left-wrap input-company-name">
+                                    </div>
+                                </div>
+                                <div class=" control-row">
+                                    <div class="control-label">
+                                        开户许可证核准号
+                                    </div>
+                                    <div class="control-input control-text  relative">
+                                        <input type="text" placeholder="开户许可证核准号" name="account_number" class=" input-text input-text-long left-wrap">
+                                    </div>
+                                </div>
+                                <div class=" control-row">
+                                    <div class="control-label">
+                                        法人名称
+                                    </div>
+                                    <div class="control-input control-text  relative">
+                                        <input type="text" placeholder="法人名称" name="legal_name" class=" input-text input-text-long left-wrap input-name" maxlength="16">
+                                    </div>
+                                </div>
+                                <div class=" control-row">
+                                    <div class="control-label">
+                                        法人身份证号
+                                    </div>
+                                    <div class="control-input control-text  relative">
+                                        <input type="text" placeholder="法人身份证号" name="legal_number" class=" input-text input-text-long left-wrap input-id" maxlength="18">
+                                        <div class="expand font-pro hide"></div>
+                                    </div>
+                                    <div class="div-bank-card-large-tip"></div>
+                                </div>
+                                <div class=" control-row">
+                                    <div class="control-label">
+                                        企业联系人
+                                    </div>
+                                    <div class="control-input control-text  relative">
+                                        <input type="text" placeholder="企业联系人" name="business_contact" class=" input-text input-text-long left-wrap" maxlength="16">
+                                    </div>
+                                </div>
+                                <div class=" control-row">
+                                    <div class="control-label control-label-width">
+                                        联系人手机号
+                                    </div>
+                                    <div class="control-input control-text  relative">
+                                        <input type="text" placeholder="联系手机号" name="bu_contact_phone" class=" input-text input-text-long left-wrap" maxlength="18">
+                                    </div>
+                                </div>
+                                <div class=" control-row">
+                                    <div class="control-label control-label-width">
+                                        详细地址
+                                    </div>
+                                    <div class="control-input control-text  relative">
+                                        <input type="text" placeholder="详细地址" name="address" class=" input-text input-text-long left-wrap" maxlength="18">
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="real-title">对公账户信息</div>
+                            <div class="form-wrap-1">
+                                <div class="control-row cl">
+                                    <div class=" control-input control-text drdc">
+                                        <input id="btnSubmit" type="submit" class="button button_h46" value="保存">
+
+                                    </div>
+                                </div>
+                                <div class="control-row cl">
+                                    <div id="formError" class="fs4 sz14 pl20 ml5 hide"></div>
+                                </div>
+                            </div>
+                        </div>
+                    </form>
+
+
+                </div>
 			</div>
 		</div>
+
+
+		<div th:include="common/footer" ></div>
 	</body>
-		<script type="text/javascript" src="../js/core.js"></script>
+		<script type="text/javascript" th:src="@{js/core.js}"></script>
 </html>
