--- a/src/main/resources/templates/milestone.html
+++ b/src/main/resources/templates/milestone.html
@@ -1,16 +1,37 @@
 <!DOCTYPE html>
-<html>
+<html xmlns:th="http://www.thymeleaf.org"
+	  xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity4">
 	<head>
 		<meta charset="UTF-8" />
 		<meta http-equiv="Content-Type" content="text/html;charset=UTF-8" />
 		<title>合规运营 - 海马医疗耗材采购官网</title>
 		<link rel="shortcut icon" type="image/x-icon" href="favicon.ico" />
-		<link rel="stylesheet" type="text/css" href="css/heigui/animation.css">
-		<link rel="stylesheet" type="text/css" href="css/heigui/base.css" />
-		<link rel="stylesheet" type="text/css" href="css/heigui/development.css" />
+		<link rel="stylesheet" type="text/css" th:href="@{css/heigui/animation.css}">
+		<link rel="stylesheet" type="text/css" th:href="@{css/heigui/base.css}" />
+		<link rel="stylesheet" type="text/css" th:href="@{css/heigui/development.css}" />
+        <link rel="stylesheet" th:href="@{css/base.css}" />
+        <script type="text/javascript" th:src="@{js/jquery-3.2.1.min.js}"></script>
 	</head>
 	<body>
-		
+	<div sec:authorize="hasRole('ROLE_ADMIN')"> <!-- 用户类型为ROLE_ADMIN 显示 -->
+		<div th:include="common/header_xt" ></div>
+	</div>
+
+	<div sec:authorize="hasRole('ROLE_USER')"> <!-- 用户类型为ROLE_USER 显示 -->
+		<div th:include="common/header_gys" ></div>
+	</div>
+	<div sec:authorize="isAnonymous()"> <!-- 用户类型为ROLE_USER 显示 -->
+		<div th:include="common/header_gys" ></div>
+	</div>
+	<div sec:authorize="hasRole('ROLE_SPGLY')"> <!-- 用户类型为ROLE_SPGLY 显示 -->
+		<div th:include="common/header_sp" ></div>
+	</div>
+	<div sec:authorize="hasRole('ROLE_CGGLY')"> <!-- 用户类型为ROLE_CGGLY 显示 -->
+		<div th:include="common/header_cx" ></div>
+	</div>
+	<div sec:authorize="hasRole('ROLE_YYPGLY')"> <!-- 用户类型为ROLE_YYPGLY 显示 -->
+		<div th:include="common/header_yyp" ></div>
+	</div>
 		<div class="wrap" headerNum="4">
 			<div class="developmentBg">
 				<div id="developmentTop" class="developmentTop width-wrap">
@@ -96,5 +117,5 @@
 		</div>
 
 	</body>
-
+    <script type="text/javascript" th:src="@{js/core.js}" ></script>
 </html>
