--- a/src/main/resources/templates/applyfor.html
+++ b/src/main/resources/templates/applyfor.html
@@ -27,90 +27,70 @@
 					</div>
 				<div class=" split-line mt mb"></div>
 
-                    <form id="formCompany"  method="post" action="/addGysUserTwo" autocomplete="off" novalidate="novalidate">
-
+                    <form id="formCompany"  method="post" action="/addPurApp" autocomplete="off" novalidate="novalidate">
+                        <input type="hidden" name="mesu_id" th:value="${CustomMedicasupplies.id}">
                         <div class="enterprise-real">
                             <div class="form-wrap-1" id="divCompanyInfo">
-                                <input type="hidden" name="username"  th:value="${username}"/>
                                 <div class=" control-row">
                                     <div class="control-label">
-                                        企业名称
+                                        医用耗材名称
                                     </div>
                                     <div class="control-input control-text  relative">
-                                        <input type="text" placeholder="企业名称" name="companyName" class=" input-text input-text-long left-wrap input-company-name">
+                                        <input readonly="true" type="text"  class=" input-text input-text-long left-wrap input-company-name" th:value="${CustomMedicasupplies.name}">
                                     </div>
                                 </div>
                                 <div class=" control-row">
                                     <div class="control-label control-label-width">
-                                        营业执照
+                                        类型
                                     </div>
                                     <div class="control-input select-small control-text lh40 relative cl">
-                                        <input type="text" placeholder="统一社会信用代码" name="tyshNumber" class=" input-text input-text-long left-wrap input-company-name">
+                                        <input type="text"  readonly="true" th:value="${CustomMedicasupplies.meinfo_status}" class=" input-text input-text-long left-wrap input-company-name">
                                     </div>
                                 </div>
                                 <div class=" control-row">
                                     <div class="control-label">
-                                        开户许可证核准号
+                                        发布价格
                                     </div>
                                     <div class="control-input control-text  relative">
-                                        <input type="text" placeholder="开户许可证核准号" name="account_number" class=" input-text input-text-long left-wrap">
+                                        <input type="text" readonly="true" th:value="${CustomMedicasupplies.rel_quotation}" class=" input-text input-text-long left-wrap">
                                     </div>
                                 </div>
                                 <div class=" control-row">
                                     <div class="control-label">
-                                        法人名称
+                                        采购数量
                                     </div>
                                     <div class="control-input control-text  relative">
-                                        <input type="text" placeholder="法人名称" name="legal_name" class=" input-text input-text-long left-wrap input-name" maxlength="16">
+                                        <input type="text" readonly="true" th:value="${CustomMedicasupplies.number}" class=" input-text input-text-long left-wrap input-name" maxlength="16">
                                     </div>
                                 </div>
                                 <div class=" control-row">
                                     <div class="control-label">
-                                        法人身份证号
+                                        交付截止时间
                                     </div>
                                     <div class="control-input control-text  relative">
-                                        <input type="text" placeholder="法人身份证号" name="legal_number" class=" input-text input-text-long left-wrap input-id" maxlength="18">
+                                        <input type="text" readonly="true" th:value="${CustomMedicasupplies.delivery_time}"  class=" input-text input-text-long left-wrap input-id" maxlength="18">
                                         <div class="expand font-pro hide"></div>
                                     </div>
                                     <div class="div-bank-card-large-tip"></div>
                                 </div>
                                 <div class=" control-row">
                                     <div class="control-label">
-                                        企业联系人
+                                        供应商报价
                                     </div>
                                     <div class="control-input control-text  relative">
-                                        <input type="text" placeholder="企业联系人" name="business_contact" class=" input-text input-text-long left-wrap" maxlength="16">
+                                        <input type="text"  placeholder="供应商报价" name="gysmoney" class=" input-text input-text-long left-wrap" maxlength="16">
                                     </div>
                                 </div>
-                                <div class=" control-row">
-                                    <div class="control-label control-label-width">
-                                        联系人手机号
-                                    </div>
-                                    <div class="control-input control-text  relative">
-                                        <input type="text" placeholder="联系手机号" name="bu_contact_phone" class=" input-text input-text-long left-wrap" maxlength="18">
-                                    </div>
-                                </div>
-                                <div class=" control-row">
-                                    <div class="control-label control-label-width">
-                                        详细地址
-                                    </div>
-                                    <div class="control-input control-text  relative">
-                                        <input type="text" placeholder="详细地址" name="address" class=" input-text input-text-long left-wrap" maxlength="18">
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="real-title">对公账户信息</div>
+
                             <div class="form-wrap-1">
                                 <div class="control-row cl">
                                     <div class=" control-input control-text drdc">
                                         <input id="btnSubmit" type="submit" class="button button_h46" value="保存">
-
                                     </div>
                                 </div>
-                                <div class="control-row cl">
-                                    <div id="formError" class="fs4 sz14 pl20 ml5 hide"></div>
-                                </div>
+
                             </div>
+                        </div>
                         </div>
                     </form>
 
