--- a/src/main/resources/templates/deliverinform.html
+++ b/src/main/resources/templates/deliverinform.html
@@ -69,8 +69,7 @@
                             <td class="align-center" th:text="${CustomMedicasupplies.number}"></td>
                             <td class="align-center" th:text="${CustomMedicasupplies.delivery_time}"></td>
                             <td  class="align-center">
-                                <a  class="button green-button mb">申请</a>
-                                <!--th:href="/applyfor"-->
+                                <a th:href="@{'/applyfor/' +${CustomMedicasupplies.id}}"  class="button green-button mb">申请</a>
                             </td>
 
                         </tr>
