--- a/src/main/resources/templates/usermanagement/purchasingrecords.html
+++ b/src/main/resources/templates/usermanagement/purchasingrecords.html
@@ -1,173 +1,156 @@
 <!DOCTYPE html>
-<html>
+<html xmlns:th="http://www.thymeleaf.org"
+      xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity4">
 	<head>
 		<meta charset="UTF-8">
 		<title>采购管理</title>
-		<link rel="stylesheet" href="../css/commonn.css" />
-		<script type="text/javascript" src="../js/jquery-3.2.1.min.js" ></script>
-		<script type="text/javascript" src="../js/tr.js" ></script>
-		<script type="text/javascript" src="../js/jQ.js" ></script>
+        <link rel="stylesheet" th:href="@{/css/commonn.css}" />
+        <link rel="stylesheet" th:href="@{/css/base.css}" />
+        <link rel="stylesheet" th:href="@{/css/pop.css}" />
+        <script type="text/javascript" th:src="@{/js/jquery-3.2.1.min.js}"></script>
+        <script type="text/javascript" th:src="@{/js/account.js}" ></script>
 	</head>
 
 	<body>
-		<div id="container" class="">
-			<div class="width-wrap">
-				<div class="content cl">
-					<!--左侧导航开始-->
-					<div id="left-nav" class="left-wrap">
-						<!--左侧导航开始-->
-						<ul class="drdc">
-							<li>
-								<a href="account.html">账户总览</a>
-							</li>
-							<li class="left-nav-line"></li>
-							<li>
-								<a class="a" href="purchasingrecords.html">采购申请记录</a>
-							</li>
-							<li class="left-nav-line"></li>
-							<li>
-								<a  href="informationchanges.html">企业信息修改</a>
-							</li>
-							
-							<li class="left-nav-line"></li>
-							<li class="left-nav-line"></li>
-							<li class="left-nav-line"></li>
-						</ul>
-						<!--左侧导航结束-->
-					</div>
-					<!--左侧导航结束-->
-					<!--右侧内容开始-->
-					<div id="right-content" class="right-wrap  white-bg add-border">
-                <div class="title">
-                    <h3>采购申请记录 <span class="pl lh40 transaction-agreement"></span></h3>
+    <div sec:authorize="hasRole('ROLE_USER')"> <!-- 用户类型为ROLE_USER 显示 -->
+        <div th:include="common/header_gys" ></div>
+    </div>
+    <div id="container" class="containermcompany">
+        <div class="width-wrap">
+            <div class="content cl">
+                <!--左侧导航开始-->
+                <div id="left-nav" class="left-wrap">
+                    <!--左侧导航开始-->
+                    <ul class="drdc">
+                        <li>
+                            <a href="account.html">账户总览</a>
+                        </li>
+                        <li class="left-nav-line"></li>
+                        <li>
+                            <a class="a" href="purchasingrecords.html">采购申请记录</a>
+                        </li>
+                        <li class="left-nav-line"></li>
+                        <li>
+                            <a href="informationchanges.html">企业信息修改</a>
+                        </li>
+
+                        <li class="left-nav-line"></li>
+                        <li class="left-nav-line"></li>
+                        <li class="left-nav-line"></li>
+                    </ul>
+                    <!--左侧导航结束-->
                 </div>
+                <!--左侧导航结束-->
+                <!--右侧内容开始-->
+                <div class="right-wrap" id="right-content">
+                    <div class="cl">
+                <div id="middle" class="asset mr">
+                    <div id="right-content" class="right-wrap  white-bg add-border">
+                        <div class="title">
+                            <h3>采购申请记录 <span class="pl lh40 transaction-agreement"></span></h3>
+                        </div>
+                        <!--筛选开始-->
+                        <form>
+                            <div class="form-wrap-5" id="divCompanyInfo">
+                                <div class=" control-row">
+                                    <div class="control-label control-label-width">
+                                        医用耗材名称
+                                    </div>
+                                    <div class="control-input select-small control-text lh40 relative1 cl">
+                                        <input type="text" placeholder="医用耗材名称" name="companyId" class=" input-text input-text-long1 left-wrap input-company-name">
+                                    </div>
+                                </div>
+                                <div class=" control-row">
+                                    <div class="control-label">
+                                        状态
+                                    </div>
+                                    <div class="control-input control-text  relative1">
+                                        <select name="" class="input-text input-text-long1 left-wrap">
+                                            <option value="0">草稿</option>
+                                            <option value="1">已删除</option>
+                                            <option value="2">待审批</option>
+                                            <option value="3">审批通过</option>
+                                            <option value="4">审批不通过</option>
+                                        </select>
+                                    </div>
+                                </div>
+                            </div>
+                            <div align="center">
+                                <input type="button" class="button2 mb" value="重置" />
+                                <input type="button" class="button green-button mb" value="查询" />
+                            </div>
 
-                <!--筛选开始-->
-               
-                <form>
-					<div class="form-wrap-5" id="divCompanyInfo">
-						<div class=" control-row">
-							<div class="control-label">
-								申请编号
-							</div>
-							<div class="control-input control-text  relative1">
-								<input type="text" placeholder="申请编号" name="companyName" class=" input-text input-text-long1 left-wrap input-company-name">
-							</div>
-							
-						</div>
-						<div class=" control-row">
-							<div class="control-label control-label-width">
-								医用耗材名称
-							</div>
-							<div class="control-input select-small control-text lh40 relative1 cl">
-								<input type="text" placeholder="医用耗材名称" name="companyId" class=" input-text input-text-long1 left-wrap input-company-name">
-							</div>
-						</div>
-						<div class=" control-row">
-							<div class="control-label">
-								状态
-							</div>
-							<div class="control-input control-text  relative1">
-								<!--<input type="text" list="sexlist" placeholder="状态" id="taxNo" name="taxNo" class="input-text input-text-long1 left-wrap">
-								 <datalist id="sexlist">
-					                <option>男</option>
-					                <option>女</option>
-					            </datalist>
-					            -->
-					            <select name="" class="input-text input-text-long1 left-wrap"> <!--0草稿  1已删除  2已提交（待审批）  3审批通过   4审批不通过-->
-									<option value="0">草稿</option> 
-									<option value="1">已删除</option> 
-									<option value="2">待审批</option> 
-									<option value="3">审批通过</option> 
-									<option value="4">审批不通过</option> 
-								</select> 
-							</div>
-						</div>
-					</div>
-					<div align="center">
-						<input type="button" class="button2 mb" value="重置"/>
-					<input type="button" class="button green-button mb" value="查询"/>
-					</div>
-					
-                </form>
-                
-				<div class=" split-line mt mb"></div>
-                <!--筛选结束-->
-                <!--列表开始-->
-                <div class="table-list sz14">
-                    <table class="table-fixed" width="100%" cellspacing="0" cellpadding="0">
-                        <thead>
-                        <tr>
-                            <th class="align-center" width="60">申请编号</th>
-                            <th class="align-center" width="90">医用耗材名称</th>
-                            <th class="align-center" width="60">所需数量</th>
-                            <th class="align-center" width="40">报价</th>
-                            <th class="align-center" width="100">交付时间</th>
-                            <th class="align-center" width="75" >状态</th>
-                            <th class="align-center" width="100">创建时间</th>
-                            <th class="align-center" width="120">操作</th>
-                        </tr>
-                        </thead>
-                        <tbody class="recordLists">
-    
-					    <tr class="drdc">
-					       
-					        
-					        <td class="align-center">111</td>
-					        <td class="align-center relative">
-					            <em class="fs1">针管</em>
-					        </td>
-					        <td class="align-center font-pro relative">
-					            <em class="fs4 sz14">216</em>
-					        </td>
-					        <td class="align-center font-pro relative">
-					            <em class="fs4 sz14">216.61</em>
-					        </td>
-					        <td class="align-centert">
-					        	<em class="fs2 font-pro">2019-04-13</em>
-					        </td>
-					        <td class="align-center">
-					         	<em class="fs1">草稿</em><!--0草稿  1已删除  2已提交（待审批）  3审批通过   3审批不通过-->
-					        </td>
-					        <td class="align-center">
-					        	<em class="fs2 font-pro">2019-04-13</em>
-					        </td>
-					        <td class="align-center">
-					        	<input type="button" class="button2 mb" value="修改" />
-					         	<input type="button" class="button mb" value="删除" />			            
-					            	
-					        </td>
-					    </tr>
-					    </tbody>
-					</table>
-				        </div>
-				        <!--列表结束-->
-				        <!--翻页开始-->
-				        <div class="paging-box">
-				        	<div class="paging align-right sz14">
-				        		<a class="ky_pre_page" href="javascript:void(0);">
-				        			<i class="common-icon-New pre-icon"></i>
-				        		</a>
-				        	<a href="javascript:void(0);" class="a">1</a>
-				        	<a href="javascript:void(0);">2</a>
-				        	<a href="javascript:void(0);">3</a>
-				        	<a href="javascript:void(0);">4</a>
-				        	<a href="javascript:void(0);">5</a>
-				        	<span>...</span>
-				        	<a href="javascript:void(0);">8</a>
-				        	<a href="javascript:void(0);">9</a>
-				        	<a href="#" class="ky_next_page delmr">
-				        		<i class="common-icon-New pre-icon flipx"></i>
-				        	</a>
-				        	</div>
-				        </div>
-				        <!--翻页结束-->
-				    </div>
-					<!--右侧内容结束-->
-				</div>
-			</div>
-		</div>
+                        </form>
 
-	</body>
+                        <div class=" split-line mt mb"></div>
+                        <!--筛选结束-->
+                        <!--列表开始-->
+                        <div class="table-list sz14">
+                            <table class="table-fixed" width="100%" cellspacing="0" cellpadding="0">
+                                <thead>
+                                <tr>
+                                    <th class="align-center" width="60">申请编号</th>
+                                    <th class="align-center" width="90">医用耗材名称</th>
+                                    <th class="align-center" width="60">所需数量</th>
+                                    <th class="align-center" width="80">发布报价</th>
+                                    <th class="align-center" width="80">交付时间</th>
+                                    <th class="align-center" width="75" >状态</th>
+                                    <!--<th class="align-center" width="80">创建时间</th>-->
+                                    <th class="align-center" width="70">供应商报价</th>
+                                    <th class="align-center" width="100">操作</th>
+                                </tr>
+                                </thead>
+                                <tbody class="recordLists">
+                                <div th:if="${jq.rows != null}">
+                                    <tr class="drdc" th:each="SupplierApplication : ${jq.rows}">
+                                        <td class="align-center" th:text="${SupplierApplication.id}">111</td>
+                                        <td class="align-center" th:text="${SupplierApplication.name}"></td>
+                                        <td class="align-center" th:text="${SupplierApplication.number}"></td>
+                                        <td class="align-center" th:text="${SupplierApplication.rel_quotation}"></td>
+                                        <td class="align-center" th:text="${SupplierApplication.delivery_time}"></td>
+                                        <td class="align-center" th:text="${SupplierApplication.purapp_status}"></td>
+                                        <td class="align-center" th:text="${SupplierApplication.gysmoney}"></td>
+                                        <td class="align-center">
+                                            <input type="button" class="tjyyp1 button2 mb" th:onclick="'javascript:updateMed(\''+${SupplierApplication.id}+'\');'" value="修改" />
+                                            <a class="button mb" onclick="return confirm('您确定要删除吗？')" th:href="@{'/deleteMedical/'+${SupplierApplication.id}}">删除</a>
+                                        </td>
+                                    </tr>
+                                </div>
+                                </tbody>
+                            </table>
+                        </div>
+                        <!--列表结束-->
+                        <!--翻页开始-->
+                        <div class=" split-line mt mb"></div>
+                        <div style="text-align:center;font-size: 15px">
+                            <label>第<span th:text="${jq.p}"></span>/<span th:text="${jq.totolPage}"></span>页   共<span th:text="${jq.total}"></span>条</label>
+                            <a th:href="@{/administrator/medicalsupplies(p = 1,name=${name},status=${status})}" type="button" role=button class="button green-button mb">首页</a>
+                            <a th:if="${jq.p > 1}" th:href="@{/administrator/medicalsupplies(p=${jq.p - 1},name=${name},status=${status})}" type="button" role=button class="button green-button mb">上一页</a>
+                            <a th:if="${jq.p <= 1}" class="button green-button mb">上一页</a>
+                            <a th:if="${jq.p != jq.totolPage}" th:href="@{/administrator/medicalsupplies(p=${jq.p + 1},name=${name},status=${status})}" type="button" role=button class="button green-button mb">下一页</a>
+                            <a th:if="${jq.p == jq.totolPage}" type="button" class="button green-button mb">下一页</a>
+                            <a th:href="@{/administrator/medicalsupplies(p=${jq.totolPage},name=${name},status=${status})}" type="button" role=button class="button green-button mb">尾页</a>
 
+                            <form action="/administrator/medicalsupplies" method="get" style="margin:0px;display:inline;">
+                                跳转到: <input type="text" style="width: 30px" name="p" />页
+                                <!--(user_id=${user_id},name=${name},status=${status})-->
+                                <input type="hidden" name="name" th:value="${name}" />
+                                <input type="hidden" name="status" th:value="${status}" />
+                                <input type="submit" value="跳转" class="button green-button mb" />
+                            </form>
+                        </div>
+                        <!--翻页结束-->
+
+                    </div>
+
+                </div>
+                <!--右侧内容结束-->
+            </div>
+        </div>
+
+
+
+    </div> </div> </div>
+    </body>
+    <script type="text/javascript" th:src="@{/js/core.js}" ></script>
 </html>
