--- a/src/main/resources/static/css/commonn.css
+++ b/src/main/resources/static/css/commonn.css
@@ -3105,6 +3105,10 @@ label {
  width:975px;
  min-height:721px
 }
+#right-content1 {
+ width:1005px;
+ min-height:721px
+}
 .right-width {
  width:1020px
 }
