--- a/src/main/resources/templates/administrator/approval.html
+++ b/src/main/resources/templates/administrator/approval.html
@@ -4,7 +4,7 @@
 	<head>
 		<meta charset="UTF-8">
 		<title>海马采购审批管理 - 海马官网</title>
-		<link rel="shortcut icon" type="image/x-icon" href="favicon.ico" />
+		<link rel="shortcut icon" type="image/x-icon" th:href="@{/favicon.ico}" />
         <link rel="stylesheet" th:href="@{css/commonn.css}" />
         <link rel="stylesheet" th:href="@{css/base.css}" />
 		<link rel="stylesheet" th:href="@{css/pop.css}" />
@@ -16,18 +16,8 @@
     <div sec:authorize="hasRole('ROLE_ADMIN')"> <!-- 用户类型为ROLE_ADMIN 显示 -->
         <div th:include="common/header_xt" ></div>
     </div>
-
-    <div sec:authorize="hasRole('ROLE_USER')"> <!-- 用户类型为ROLE_USER 显示 -->
-        <div th:include="common/header_gys" ></div>
-    </div>
     <div sec:authorize="hasRole('ROLE_SPGLY')"> <!-- 用户类型为ROLE_SPGLY 显示 -->
         <div th:include="common/header_sp" ></div>
-    </div>
-    <div sec:authorize="hasRole('ROLE_CGGLY')"> <!-- 用户类型为ROLE_CGGLY 显示 -->
-        <div th:include="common/header_cx" ></div>
-    </div>
-    <div sec:authorize="hasRole('ROLE_YYPGLY')"> <!-- 用户类型为ROLE_YYPGLY 显示 -->
-        <div th:include="common/header_yyp" ></div>
     </div>
 
 		<div class="wrap">
@@ -35,27 +25,26 @@
 			<div class="containermcompany">
 				<div class="width-wrap white-bg add-border cl">
 					<div class="title">
-						<h3>采购信息管理</h3>
+						<h3>采购审批管理</h3>
 						
 					</div>
 
 			<!--筛选开始-->
-                <form>
+                <form  action="/administrator/approval" method="get">
 					<div class="form-wrap-5" id="divCompanyInfo">
 						<div class=" control-row">
 							<div class="control-label">
 								医用耗材名称
 							</div>
 							<div class="control-input control-text  relative1">
-								<input type="text" placeholder="医用耗材名称" name="companyName" class=" input-text input-text-long1 left-wrap input-company-name">
+								<input type="text" placeholder="医用耗材名称" name="name" class=" input-text input-text-long1 left-wrap input-company-name">
 							</div>
 							
 						</div>
 						
 					</div>
 					<div align="center">
-						<input type="button" class="button2 mb" value="重置"/>
-					<input type="button" class="button green-button mb" value="查询"/>
+						<input type="submit" class="button green-button mb" value="查询"/>
 					</div>
 					
                 </form>
@@ -70,7 +59,7 @@
                             <th class="align-center" width="90">医用耗材名称</th>
                             <th class="align-center" width="50">状态</th>
                             <th class="align-center" width="60">发布价格</th>
-                            <th class="align-center" width="60" >采购数量</th>
+                            <th class="align-center" width="60">采购数量</th>
                             <th class="align-center" width="75">供应商报价</th>
                             <th class="align-center" width="100">交付时间</th>
                             <th class="align-center" width="120">操作</th>
@@ -78,57 +67,59 @@
                         </thead>
                         <tbody class="recordLists">
     
-					    <tr class="drdc">
-					       
-					        
-					        <td class="align-center relative">
-					            <em class="fs1">针管</em>
+					    <tr class="drdc" th:each="SupplierApplication : ${jq.rows}">
+					        <td class="align-center relative" >
+					            <em class="fs1" th:text="${SupplierApplication.name}">针管</em>
+					        </td>
+							<div th:if="${SupplierApplication.purapp_status} == 1">
+								<td class="align-center" >待审批</td>
+							</div>
+							<div th:if="${SupplierApplication.purapp_status} == 2">
+								<td class="align-center" >审批通过</td>
+							</div>
+							<div th:if="${SupplierApplication.purapp_status} == 3">
+								<td class="align-center" >审批不通过</td>
+							</div>
+					        <td class="align-center font-pro relative">
+					            <em class="fs4 sz14" th:text="${SupplierApplication.rel_quotation}">400</em>
 					        </td>
 					        <td class="align-center font-pro relative">
-					            <em class="fs2 font-pro">待审批</em>
+					            <em class="fs4 sz14" th:text="${SupplierApplication.number}">400</em>
 					        </td>
 					        <td class="align-center font-pro relative">
-					            <em class="fs4 sz14">400</em>
-					        </td>
-					        <td class="align-center font-pro relative">
-					            <em class="fs4 sz14">400</em>
-					        </td>
-					        <td class="align-center font-pro relative">
-					        	<em class="fs4 sz14">400</em>
+					        	<em class="fs4 sz14" th:text="${SupplierApplication.gysmoney}">400</em>
 					        </td>
 					        <td class="align-center">
-					        	<em class="fs2 font-pro">2015-11-03</em>
+					        	<em class="fs2 font-pro"th:text="${SupplierApplication.delivery_time}">2015-11-03</em>
 					        </td>
 					        <td class="align-center">
-					        	<input id="" type="button" class="button2 mb" value="审批通过" />
-					         	<input type="button" class="button mb" value="审批不通过" />			            
-					            	
+								<a class="button mb" onclick="return confirm('您确定审批通过？')" th:href="@{'/updateStatusTG/'+${SupplierApplication.id}}">审批通过</a>
+								<a class="button mb" th:href="@{'/updateStatusBTG/'+${SupplierApplication.id}}">审批不通过</a>
+
 					        </td>
 					    </tr>
 					    </tbody>
 					</table>
 				        </div>
 				        <!--列表结束-->
-				        <!--翻页开始-->
-				        <div class="paging-box">
-				        	<div class="paging align-right sz14">
-				        		<a class="ky_pre_page" href="javascript:void(0);">
-				        			<i class="common-icon-New pre-icon"></i>
-				        		</a>
-				        	<a href="javascript:void(0);" class="a">1</a>
-				        	<a href="javascript:void(0);">2</a>
-				        	<a href="javascript:void(0);">3</a>
-				        	<a href="javascript:void(0);">4</a>
-				        	<a href="javascript:void(0);">5</a>
-				        	<span>...</span>
-				        	<a href="javascript:void(0);">8</a>
-				        	<a href="javascript:void(0);">9</a>
-				        	<a href="#" class="ky_next_page delmr">
-				        		<i class="common-icon-New pre-icon flipx"></i>
-				        	</a>
-				        	</div>
-				        </div>
-				        <!--翻页结束-->
+                    <!--翻页开始-->
+                    <div class=" split-line mt mb"></div>
+                    <div style="text-align:center;font-size: 15px">
+                        <label>第<span th:text="${jq.p}"></span>/<span th:text="${jq.totolPage}"></span>页   共<span th:text="${jq.total}"></span>条</label>
+                        <a th:href="@{/administrator/approval(p = 1,name=${name})}" type="button" role=button class="button green-button mb">首页</a>
+                        <a th:if="${jq.p > 1}" th:href="@{/administrator/approval(p=${jq.p - 1},name=${name})}"  type="button" role=button class="button green-button mb">上一页</a>
+                        <a th:if="${jq.p <= 1}" class="button green-button mb">上一页</a>
+                        <a th:if="${jq.p != jq.totolPage}" th:href="@{/administrator/approval(p=${jq.p + 1},name=${name})}"  type="button" role=button class="button green-button mb">下一页</a>
+                        <a th:if="${jq.p == jq.totolPage}"  type="button" class="button green-button mb">下一页</a>
+                        <a th:href="@{/administrator/approval(p=${jq.totolPage},name=${name})}" type="button" role=button class="button green-button mb">尾页</a>
+
+                        <form action="/administrator/approval" method="get" style="margin:0px;display:inline;">
+                            跳转到: <input type="text" style="width: 30px" name="p" />页
+                            <input type="hidden"  name="name" th:value="${name}"/>
+                            <input type="submit" value="跳转" class="button green-button mb"/>
+                        </form>
+                    </div>
+                    <!--翻页结束-->
 				    </div>
 					<!--右侧内容结束-->
 
