--- a/src/main/resources/templates/common/footer.html
+++ b/src/main/resources/templates/common/footer.html
@@ -15,34 +15,34 @@
 						<dl>
 							<dt>关于我们</dt>
 							<dd>
-								<a href="#" style="cursor:default">关于平台</a>
+								<a style="cursor:default">关于平台</a>
 							</dd>
 							<dd>
-								<a href="#" style="cursor:default">团队介绍</a>
+								<a  style="cursor:default">团队介绍</a>
 							</dd>
 							<dd>
-								<a href="#" style="cursor:default">集团背景</a>
+								<a  style="cursor:default">集团背景</a>
 							</dd>
 							<dd>
-								<a href="#" style="cursor:default">隐私政策</a>
+								<a  style="cursor:default">隐私政策</a>
 							</dd>
 						</dl>
 						<dl>
 							<dt>产品服务</dt>
 							<dd>
-								<a href="#" style="cursor:default">联系我们</a>
+								<a  style="cursor:default">联系我们</a>
 							</dd>
 						</dl>
 						<dl class="delmr">
 							<dt>安全保障</dt>
 							<dd>
-								<a href="#" style="cursor:default">平台数据</a>
+								<a  style="cursor:default">平台数据</a>
 							</dd>
 							<dd>
-								<a href="#" style="cursor:default">风险管理</a>
+								<a style="cursor:default">风险管理</a>
 							</dd>
 							<dd>
-								<a href="#" style="cursor:default">法律法规</a>
+								<a  style="cursor:default">法律法规</a>
 							</dd>
 						</dl>
 					</div>
