--- a/src/main/resources/templates/usermanagement/informationchanges.html
+++ b/src/main/resources/templates/usermanagement/informationchanges.html
@@ -26,15 +26,15 @@
 						<!--左侧导航开始-->
 						<ul class="drdc">
 							<li>
-								<a href="account.html">账户总览</a>
+								<a th:href="@{/usermanagement/account}">账户总览</a>
 							</li>
 							<li class="left-nav-line"></li>
 							<li>
-								<a href="purchasingrecords.html">采购申请记录</a>
+								<a th:href="@{/usermanagement/purchasingrecords}">采购申请记录</a>
 							</li>
 							<li class="left-nav-line"></li>
 							<li>
-								<a class="a"  href="informationchanges.html">企业信息修改</a>
+								<a class="a"  th:href="@{/usermanagement/informationchanges}">企业信息修改</a>
 							</li>
 							
 							<li class="left-nav-line"></li>
@@ -45,7 +45,7 @@
 					</div>
 					<!--左侧导航结束-->
 					<!--右侧内容开始-->
-					<div id="right-content" class="right-wrap">
+					<div id="right-content1" class="right-wrap">
 						<div id="securitySetting" class=" white-bg add-border">
 							<div class="title cl">
 								<h3 class="left-wrap">账户信息</h3>
