--- a/src/main/resources/templates/applyfor.html
+++ b/src/main/resources/templates/applyfor.html
@@ -4,7 +4,7 @@
 	<head>
 		<meta charset="UTF-8">
 		<title>海马供应商申请 - 海马官网</title>
-		<link rel="shortcut icon" type="image/x-icon" href="favicon.ico" />
+		<link rel="shortcut icon" type="image/x-icon" href="../static/favicon.ico" />
 		<link rel="stylesheet" th:href="@{css/commonn.css}" />
 		<link rel="stylesheet" th:href="@{css/base.css}" />
 		<script type="text/javascript" th:src="@{js/jquery-3.2.1.min.js}"></script>
