--- a/src/main/resources/templates/deliverinform.html
+++ b/src/main/resources/templates/deliverinform.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <title>采购发布信息 - 海马官网</title>
-    <link rel="shortcut icon" type="image/x-icon" href="favicon.ico" />
+    <link rel="shortcut icon" type="image/x-icon" href="../static/favicon.ico" />
 
     <link rel="stylesheet" th:href="@{css/commonn.css}" />
     <link rel="stylesheet" th:href="@{css/base.css}" />
