--- a/src/main/resources/templates/milestone.html
+++ b/src/main/resources/templates/milestone.html
@@ -5,7 +5,7 @@
 		<meta charset="UTF-8" />
 		<meta http-equiv="Content-Type" content="text/html;charset=UTF-8" />
 		<title>合规运营 - 海马医疗耗材采购官网</title>
-		<link rel="shortcut icon" type="image/x-icon" href="favicon.ico" />
+		<link rel="shortcut icon" type="image/x-icon" href="../static/favicon.ico" />
 		<link rel="stylesheet" type="text/css" th:href="@{css/heigui/animation.css}">
 		<link rel="stylesheet" type="text/css" th:href="@{css/heigui/base.css}" />
 		<link rel="stylesheet" type="text/css" th:href="@{css/heigui/development.css}" />
