--- a/src/main/resources/templates/usermanagement/purchasingrecords.html
+++ b/src/main/resources/templates/usermanagement/purchasingrecords.html
@@ -9,6 +9,12 @@
         <link rel="stylesheet" th:href="@{/css/pop.css}" />
         <script type="text/javascript" th:src="@{/js/jquery-3.2.1.min.js}"></script>
         <script type="text/javascript" th:src="@{/js/account.js}" ></script>
+        <script type="text/javascript">
+            function updateMed(a){
+                //可正常赋值
+                $("#yid").attr("value",a);
+            }
+        </script>
 	</head>
 
 	<body>
@@ -23,15 +29,15 @@
                     <!--左侧导航开始-->
                     <ul class="drdc">
                         <li>
-                            <a href="account.html">账户总览</a>
+                            <a th:href="@{/usermanagement/account}">账户总览</a>
                         </li>
                         <li class="left-nav-line"></li>
                         <li>
-                            <a class="a" href="purchasingrecords.html">采购申请记录</a>
+                            <a class="a" th:href="@{/usermanagement/purchasingrecords}">采购申请记录</a>
                         </li>
                         <li class="left-nav-line"></li>
                         <li>
-                            <a href="informationchanges.html">企业信息修改</a>
+                            <a   th:href="@{/usermanagement/informationchanges}">企业信息修改</a>
                         </li>
 
                         <li class="left-nav-line"></li>
@@ -42,15 +48,13 @@
                 </div>
                 <!--左侧导航结束-->
                 <!--右侧内容开始-->
-                <div class="right-wrap" id="right-content">
-                    <div class="cl">
-                <div id="middle" class="asset mr">
-                    <div id="right-content" class="right-wrap  white-bg add-border">
-                        <div class="title">
+                <div id="right-content" class="right-wrap">
+                    <div id="securitySetting" class=" white-bg add-border">
+                        <div class="title cl">
                             <h3>采购申请记录 <span class="pl lh40 transaction-agreement"></span></h3>
                         </div>
                         <!--筛选开始-->
-                        <form>
+                        <form method="get" action="/usermanagement/purchasingrecords">
                             <div class="form-wrap-5" id="divCompanyInfo">
                                 <div class=" control-row">
                                     <div class="control-label control-label-width">
@@ -65,19 +69,19 @@
                                         状态
                                     </div>
                                     <div class="control-input control-text  relative1">
-                                        <select name="" class="input-text input-text-long1 left-wrap">
+                                        <select name="status" class="input-text input-text-long1 left-wrap">
                                             <option value="0">草稿</option>
-                                            <option value="1">已删除</option>
-                                            <option value="2">待审批</option>
-                                            <option value="3">审批通过</option>
-                                            <option value="4">审批不通过</option>
+                                            <option value="1">待审批</option>
+                                            <option value="2">审批通过</option>
+                                            <option value="3">审批不通过</option>
+                                            <option value="4">已删除</option>
                                         </select>
                                     </div>
                                 </div>
                             </div>
                             <div align="center">
                                 <input type="button" class="button2 mb" value="重置" />
-                                <input type="button" class="button green-button mb" value="查询" />
+                                <input type="submit" class="button green-button mb" value="查询" />
                             </div>
 
                         </form>
@@ -95,7 +99,6 @@
                                     <th class="align-center" width="80">发布报价</th>
                                     <th class="align-center" width="80">交付时间</th>
                                     <th class="align-center" width="75" >状态</th>
-                                    <!--<th class="align-center" width="80">创建时间</th>-->
                                     <th class="align-center" width="70">供应商报价</th>
                                     <th class="align-center" width="100">操作</th>
                                 </tr>
@@ -108,12 +111,41 @@
                                         <td class="align-center" th:text="${SupplierApplication.number}"></td>
                                         <td class="align-center" th:text="${SupplierApplication.rel_quotation}"></td>
                                         <td class="align-center" th:text="${SupplierApplication.delivery_time}"></td>
-                                        <td class="align-center" th:text="${SupplierApplication.purapp_status}"></td>
+                                        <div th:if="${SupplierApplication.purapp_status} == 0">
+                                            <td class="align-center" >草稿</td>
+                                        </div>
+                                        <div th:if="${SupplierApplication.purapp_status} == 1">
+                                            <td class="align-center" >待审批</td>
+                                        </div>
+                                        <div th:if="${SupplierApplication.purapp_status} == 2">
+                                            <td class="align-center" >审批通过</td>
+                                        </div>
+                                        <div th:if="${SupplierApplication.purapp_status} == 3">
+                                            <td class="align-center" >审批不通过</td>
+                                        </div>
+                                        <div th:if="${SupplierApplication.purapp_status} == 4">
+                                            <td class="align-center" >已删除</td>
+                                        </div>
                                         <td class="align-center" th:text="${SupplierApplication.gysmoney}"></td>
+                                        <div th:if="${SupplierApplication.purapp_status} == 0">
                                         <td class="align-center">
-                                            <input type="button" class="tjyyp1 button2 mb" th:onclick="'javascript:updateMed(\''+${SupplierApplication.id}+'\');'" value="修改" />
-                                            <a class="button mb" onclick="return confirm('您确定要删除吗？')" th:href="@{'/deleteMedical/'+${SupplierApplication.id}}">删除</a>
+                                            <a class="button mb" onclick="return confirm('您确定要提交申请吗？')" th:href="@{'/submitApplyfor/'+${SupplierApplication.id}}">提交</a>
+                                            <input id="xg" type="button" class="tjyyp1 button2 mb" th:onclick="'javascript:updateMed(\''+${SupplierApplication.id}+'\');'" value="修改" />
+                                            <a class="button mb" onclick="return confirm('您确定要删除吗？')" th:href="@{'/deleteApplyfor/'+${SupplierApplication.id}}">删除</a>
                                         </td>
+                                        </div>
+                                        <div th:if="${SupplierApplication.purapp_status} == 1">
+                                            --
+                                        </div>
+                                        <div th:if="${SupplierApplication.purapp_status} == 2">
+                                            --
+                                        </div>
+                                        <div th:if="${SupplierApplication.purapp_status} == 3">
+                                            --
+                                        </div>
+                                        <div th:if="${SupplierApplication.purapp_status} == 4">
+                                            --
+                                        </div>
                                     </tr>
                                 </div>
                                 </tbody>
@@ -124,14 +156,14 @@
                         <div class=" split-line mt mb"></div>
                         <div style="text-align:center;font-size: 15px">
                             <label>第<span th:text="${jq.p}"></span>/<span th:text="${jq.totolPage}"></span>页   共<span th:text="${jq.total}"></span>条</label>
-                            <a th:href="@{/administrator/medicalsupplies(p = 1,name=${name},status=${status})}" type="button" role=button class="button green-button mb">首页</a>
-                            <a th:if="${jq.p > 1}" th:href="@{/administrator/medicalsupplies(p=${jq.p - 1},name=${name},status=${status})}" type="button" role=button class="button green-button mb">上一页</a>
+                            <a th:href="@{/usermanagement/purchasingrecords(p = 1,name=${name},status=${status})}" type="button" role=button class="button green-button mb">首页</a>
+                            <a th:if="${jq.p > 1}" th:href="@{/usermanagement/purchasingrecords(p=${jq.p - 1},name=${name},status=${status})}" type="button" role=button class="button green-button mb">上一页</a>
                             <a th:if="${jq.p <= 1}" class="button green-button mb">上一页</a>
-                            <a th:if="${jq.p != jq.totolPage}" th:href="@{/administrator/medicalsupplies(p=${jq.p + 1},name=${name},status=${status})}" type="button" role=button class="button green-button mb">下一页</a>
+                            <a th:if="${jq.p != jq.totolPage}" th:href="@{/usermanagement/purchasingrecords(p=${jq.p + 1},name=${name},status=${status})}" type="button" role=button class="button green-button mb">下一页</a>
                             <a th:if="${jq.p == jq.totolPage}" type="button" class="button green-button mb">下一页</a>
-                            <a th:href="@{/administrator/medicalsupplies(p=${jq.totolPage},name=${name},status=${status})}" type="button" role=button class="button green-button mb">尾页</a>
+                            <a th:href="@{/usermanagement/purchasingrecords(p=${jq.totolPage},name=${name},status=${status})}" type="button" role=button class="button green-button mb">尾页</a>
 
-                            <form action="/administrator/medicalsupplies" method="get" style="margin:0px;display:inline;">
+                            <form action="/usermanagement/purchasingrecords" method="get" style="margin:0px;display:inline;">
                                 跳转到: <input type="text" style="width: 30px" name="p" />页
                                 <!--(user_id=${user_id},name=${name},status=${status})-->
                                 <input type="hidden" name="name" th:value="${name}" />
@@ -148,9 +180,38 @@
             </div>
         </div>
 
+        <div th:include="common/footer" ></div>
 
 
-    </div> </div> </div>
+
+        <div class="pop-wrap" id="pop-wrap8" style="display:none;opacity: 1; width: 1000px; top: 26.5px; left: 200px;" >
+            <div class="pop-title">
+                <a href="javascript:void(0);" class="right-wrap" id="right-wrap8">
+                    <i class="common-icon close-icon"></i>
+                </a>
+                <h3>修改申请订单</h3>
+            </div>
+            <div class="pop-pay">
+                <form id="form1" action="/updateApplyfor" method="post">
+                    <input id="yid"  type="text" name="id" value="" style="display:none">
+                    <div class=" control-row">
+                        <div class="control-label">
+                            供应商报价：
+                        </div>
+                        <div class="control-input control-text  relative1">
+                            <input type="text"  placeholder="供应商报价" name="gysmoney" class=" input-text input-text-long1 left-wrap input-company-name">
+                        </div>
+                    </div>
+
+                    <div align="center">
+                        <input type="submit" class="button green-button mb" value="保存"/>
+                    </div>
+                </form>
+            </div>
+        </div>
+        <div class="pop-mask" style="display: none;width: 1349px; height: 1796px; opacity: 0.5;"></div>
+
+    </div>
     </body>
     <script type="text/javascript" th:src="@{/js/core.js}" ></script>
 </html>
