--- a/src/main/resources/templates/member/login.html
+++ b/src/main/resources/templates/member/login.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org"
-	  xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity4">
+<html xmlns:th="http://www.thymeleaf.org">
 
 	<head>
 		<meta http-equiv="Content-Type" content="text/html;charset=UTF-8">
@@ -22,7 +21,7 @@
 					<em class=" font-pro sz18">400-100-8899（08:00-20:00）</em>
 				</p>
 				<h2 class="logo left-wrap ml5">
-					<a th:href="@{/index.html}">
+					<a th:href="@{/index}">
 					<img th:src="@{/img/logo.png}"  alt="海马" width="35%" height="25%">
 					</a>
 				</h2>
@@ -37,25 +36,28 @@
 				<span class="right-wrap login_link">没有账号？<a th:href="@{/member/register}" rel="nofollow" class="fs5 ml5">立即注册</a></span>
 				<h2>登录</h2>
 				<form id="reg-form" class="reg-form pb20" method="post" autocomplete="off" th:action="@{/login/form}">
-					<input name="name" type="text" style="display:none">
+					<input name="name" type="text" style="display:none" >
 					<div class="control-reg mb20">
 						<input id="name" name="username"  class="reg-input" data-rule-required="true" type="text" autocorrect="off" autocapitalize="off" placeholder="请输入用户名" tabindex="1">
 					</div>
 					<div class="control-reg mb20">
 						<input id="pwd" name="password" class="reg-input" data-rule-required="true" type="password" autocorrect="off" autocapitalize="off" placeholder="请输入密码" tabindex="2">
 					</div>
-
+                    <!-- 以下为显示认证失败等提示信息（th:if=""一定要写 ） -->
+                    <span th:if="${param.error}" style="color: red">用户名或密码错误，请重试</span>
 					<div class="control-reg mb20 cl">
 						<a th:href="@{/usermanagement/resetpassword}" class="right-wrap sz14 fs1 mt5">忘记密码？</a>
 
 					</div>
+
 					<div>
 						<input class="button reg-button sz16 drdc" type="submit" value="立即登录" tabindex="4"></div>
 
 					<div class="reg-error">
 					</div>
 				</form>
-			</div>
+
+        </div>
 		</div>
 
 		<div class="reg-copy width-wrap align-center sz14 fs1">
