--- a/src/main/resources/templates/usermanagement/account.html
+++ b/src/main/resources/templates/usermanagement/account.html
@@ -138,6 +138,8 @@
 		</div>
 
                 </div></div></div>
+
+		<div th:include="common/footer" ></div>
 <div class="pop-wrap" id="pop-wrap" style="display:none;opacity: 1; width: 1000px; top: 26.5px; left: 200px;" >
 	<div class="pop-title">
 		<a href="javascript:void(0);" class="right-wrap" id="right-wrap">
