--- a/src/main/resources/templates/administrator/approval.html
+++ b/src/main/resources/templates/administrator/approval.html
@@ -92,11 +92,18 @@
 					        <td class="align-center">
 					        	<em class="fs2 font-pro"th:text="${SupplierApplication.delivery_time}">2015-11-03</em>
 					        </td>
-					        <td class="align-center">
-								<a class="button mb" onclick="return confirm('您确定审批通过？')" th:href="@{'/updateStatusTG/'+${SupplierApplication.id}}">审批通过</a>
-								<a class="button mb" th:href="@{'/updateStatusBTG/'+${SupplierApplication.id}}">审批不通过</a>
-
-					        </td>
+							<div th:if="${SupplierApplication.purapp_status} == 1">
+								<td class="align-center">
+									<a class="button mb" onclick="return confirm('您确定审批通过？')" th:href="@{'/updateStatusTG/'+${SupplierApplication.id}}">审批通过</a>
+									<a class="button mb" th:href="@{'/updateStatusBTG/'+${SupplierApplication.id}}">审批不通过</a>
+								</td>
+							</div>
+							<div th:if="${SupplierApplication.purapp_status} == 2">
+								--
+							</div>
+							<div th:if="${SupplierApplication.purapp_status} == 3">
+								--
+							</div>
 					    </tr>
 					    </tbody>
 					</table>
