--- a/src/main/resources/templates/member/register.html
+++ b/src/main/resources/templates/member/register.html
@@ -9,9 +9,45 @@
 		<link th:href="@{/css/commonn.css}" rel="stylesheet" type="text/css">
 		<link th:href="@{/css/reg.css}" rel="stylesheet" type="text/css">
 		<link th:href="@{/css/select.css}"  rel="stylesheet" type="text/css">
-		<!--<link rel="stylesheet" th:href="@{css/base.css}" />-->
-		<!--<link rel="stylesheet" th:href="@{css/pop.css}" />-->
-		<!--<script type="text/javascript" th:src="@{js/jquery-3.2.1.min.js}" ></script>-->
+		<script type="text/javascript" th:src="@{/js/jquery-3.2.1.min.js}" ></script>
+        <script type="text/javascript">
+            $ (function ()
+            {
+                $("[name='username']").blur(function(){
+
+                    var adata = {
+                        "username" : $(this).val(),
+                    }
+                    var data = JSON.stringify(adata);
+                    //alert("username");
+                    $.ajax({
+                        type: "POST",
+                        url: "/registerUserName",
+                        //dataType: "json",
+                        //data: JSON.stringify(username),
+                        data : data ,
+                        contentType:"application/json;charset=utf-8",
+                        success: function (data) {
+                            //alert("data=" + data);
+                            if (data == "true") {//重复
+                                $("#unameSpan").css("color","red");
+                                $("#unameSpan").html("用户名已经被使用，请修改。");
+                                $("[type='submit']").attr("disabled", "true"); //禁用按钮
+                            } else {
+                                $("#unameSpan").css("color","green");
+                                $("#unameSpan").html("用户名可以使用。");
+                                $("[type='submit']").removeAttr("disabled"); //启用按钮
+                            }
+                        },
+                        error: function () {
+                            console.log('错误')
+                        }
+                    })
+                 })
+            })
+
+
+        </script>
 	</head>
 	<body class="login-bg">
 
@@ -39,7 +75,8 @@
 					<div class="control-reg relative mt">
 						<label class="login-label label-letter">用户名</label>
 						<input name="username" class="reg-input login-input-width" tabindex="0" type="text" placeholder="请输入用户名">
-					</div>
+                        <span id="unameSpan" ></span>
+                    </div>
 					<!--<div class="login-error fs4"></div>-->
 					<!--<div id="imgContent" class="control-reg relative">-->
 						<!--<label class="login-label label-letter-1" for="imgCodeInput">图形验证码</label>-->
@@ -50,7 +87,7 @@
 					<div class="login-error fs4"></div>
 					<div class="control-reg relative">
 						<label class="login-label label-letter-2" for="txtLogPwd">设置登录密码</label>
-						<i id="ipwdeye" class="progess-icon eye-icon delbl eye-position eye-close-icon"></i>
+						<!--<i id="ipwdeye" class="progess-icon eye-icon delbl eye-position eye-close-icon"></i>-->
 						<!--<input type="password" name="password" class="ignore" style="display: none;">-->
 						<input name="password"  class="reg-input login-input-width" type="password" maxlength="16" id="txtLogPwd" tabindex="4" autocorrect="off" autocapitalize="off" placeholder="请设置登录密码">
 					</div>
