--- a/src/main/resources/templates/member/tymcompany.html
+++ b/src/main/resources/templates/member/tymcompany.html
@@ -166,6 +166,7 @@
 				</div>
 			</div>
 		</div>
+		<div th:include="common/footer" ></div>
 	</body>
 	<script type="text/javascript" th:src="@{js/core.js}" ></script>
 </html>
