--- a/src/main/resources/templates/member/zchcompany.html
+++ b/src/main/resources/templates/member/zchcompany.html
@@ -172,6 +172,7 @@
 			</div>
 			</div>
 		</div>
+	<div th:include="common/footer" ></div>
 	</body>
 	<script type="text/javascript" th:src="@{js/core.js}" ></script>
 </html>
