--- a/src/main/resources/templates/milestone.html
+++ b/src/main/resources/templates/milestone.html
@@ -115,7 +115,7 @@
 			</div>
 
 		</div>
-
+	<div th:include="common/footer" ></div>
 	</body>
     <script type="text/javascript" th:src="@{js/core.js}" ></script>
 </html>
