--- a/src/main/resources/templates/usermanagement/resetpassword.html
+++ b/src/main/resources/templates/usermanagement/resetpassword.html
@@ -26,11 +26,7 @@
 			        </div>
 			        <div>
 			        	<form id="telnumAndCertForm" autocomplete="off" method="post" action="/updatePassword" novalidate="novalidate">
-				        	<!--<div class="left-progess left-wrap">-->
-				        		<!--<div class="font-pro left-progess-num">-->
-				            		<!--<p class="sz16 mt">重置登录密码</p>-->
-				            	<!--</div>-->
-				        	<!--</div>-->
+
 						    <div class="right-wrap right-progess">
 						        <div class="pa30">
 						            <div class="tied-bank-remit fs1 sz14 lh30">
@@ -42,9 +38,7 @@
 						        <div class="form-wrap mt">
                                     <div class="control-row cl">
                                         <div class="control-label">用户名</div>
-                                        <!--<div class=" control-input control-text">-->
-                                        <!--<em class="sz18 font-pro ">130****3913</em>-->
-                                        <!--</div>-->
+
                                         <div class="control-input control-text relative cl">
                                             <input type="text" name="username" data-rule-required="true"  placeholder="请输入用户名" class=" input-text input-text-long left-wrap" />
                                         </div>
@@ -56,7 +50,7 @@
                                                 <!--<em class="sz18 font-pro ">130****3913</em>-->
                                             <!--</div>-->
                                             <div class="control-input control-text relative cl">
-                                                <input type="text"   name="bu_contact_phone" data-rule-required="true"  placeholder="请输入企业联系人手机号" class=" input-text input-text-long left-wrap" />
+                                                <input type="text" id="phone1"  name="bu_contact_phone" data-rule-required="true"  placeholder="请输入企业联系人手机号" class=" input-text input-text-long left-wrap" />
                                             </div>
 
                                         </div>
@@ -65,12 +59,8 @@
                                             <div class="control-label">手机验证码</div>
                                             <div class="control-input control-text relative cl">
                                                 <input id="phoneCode" name="phoneCode" type="text" data-rule-required="true"  placeholder="请输入手机验证码" class=" input-text input-text-small left-wrap" aria-required="true">
-                                                <input id="msgBtn" type="button" value="获取验证码" class=" button button3 ml5 get-button">
-                                                <div id="sendNote" class="note-default left-wrap relative" style="display: none;">
-                                                    <span>验证码已发送至手机，30分钟内输入有效，请查收</span>
-                                                </div>
+                                                <input id="btnSendCode1" type="button" class="input-text left-wrap" value="获取验证码" onClick="sendMessage1()" />
                                             </div>
-
                                         </div>
 
                                         <div class=" control-row ">
@@ -97,4 +87,37 @@
         <div th:include="common/footer" ></div>
 	</body>
 	<script type="text/javascript" th:src="@{/js/core.js}" ></script>
+	<script type="text/javascript">
+        var phoneReg = /(^1[3|4|5|7|8]\d{9}$)|(^09\d{8}$)/;//手机号正则
+        var count = 60; //间隔函数，1秒执行
+        var InterValObj1; //timer变量，控制时间
+        var curCount1;//当前剩余秒数
+        /*第一*/
+        function sendMessage1() {
+            curCount1 = count;
+            var phone = $.trim($('#phone1').val());
+            if (!phoneReg.test(phone)) {
+                alert(" 请输入有效的手机号码");
+                return false;
+            }
+            //设置button效果，开始计时
+            $("#btnSendCode1").attr("disabled", "true");
+            $("#btnSendCode1").val( + curCount1 + "秒再获取");
+            InterValObj1 = window.setInterval(SetRemainTime1, 1000); //启动计时器，1秒执行一次
+            //向后台发送处理数据
+
+        }
+        function SetRemainTime1() {
+            if (curCount1 == 0) {
+                window.clearInterval(InterValObj1);//停止计时器
+                $("#btnSendCode1").removeAttr("disabled");//启用按钮
+                $("#btnSendCode1").val("重新发送");
+            }
+            else {
+                curCount1--;
+                $("#btnSendCode1").val( + curCount1 + "秒再获取");
+            }
+        }
+
+	</script>
 </html>
