--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -5,7 +5,7 @@
 	<head>
 		<meta charset="UTF-8">
 		<title>首页 - 海马医疗耗材采购官网</title>
-		<link rel="shortcut icon" type="image/x-icon" href="../static/favicon.ico" />
+		<link rel="shortcut icon" type="image/x-icon" href="/favicon.ico" />
 		<link rel="stylesheet" type="text/css" th:href="@{css/bootstrap.css}">
 		<link rel="stylesheet" type="text/css" th:href="@{css/index.css}" />
 		<link rel="stylesheet" th:href="@{css/commonn.css}" />
